<meta name="viewport" content="width=device-width, initial-scale=1"> fixed the issue with mobile layout not fitting screen. Created bug by removing <form> tags from RankPg html.

--- a/Public/css/styles_2.css
+++ b/Public/css/styles_2.css
@@ -49,6 +49,6 @@ hr {
 @media screen and (max-width: 600px) {
   
   .mybox1 {
-      font-size:3vw;
+      font-size:5vw;
   }
 }
